task-04 almost done

--- a/src/ex10_html-css-fundamentals-part2/task-04.html
+++ b/src/ex10_html-css-fundamentals-part2/task-04.html
@@ -7,7 +7,7 @@
   <title>Task 04</title>
 </head>
 <body>
-  <svg style="display:none;" xmlns="http://www.w3.org/2000/svg">
+  <svg style="display:none;">
     <g id="telephone">
       <title>Telephone</title>
       <path fill-rule="evenodd" d="M5.413 2.606l-2.582 2.6c-1.426 1.436-.74 3.15 0 5.2 0 0 3.55 6.092 8.139 10.714 4.878 4.914 10.577 8.136 10.577 8.136 1.883.975 3.737 1.436 5.163 0l2.582-2.6c.712-.718.865-1.997 0-2.6l-5.164-3.9c-.874-.596-1.868-.718-2.581 0l-1.527 1.538c-1.79-1.346-3.782-2.985-5.572-4.788-1.583-1.595-2.99-3.324-4.162-4.909l1.58-1.59c.713-.719.592-1.72 0-2.6L7.994 2.605a1.816 1.816 0 0 0-2.581 0m2.502 9.18l2.074-2.09c.454-.456.376-1.093 0-1.654L7.525 4.733c-.454-.61-1.19-.457-1.643 0L4.239 6.388c-.644.61-.458 2.033-.117 2.718 1.524 2.925 4.91 7.43 7.744 10.4 3.268 3.57 10.972 8.45 10.972 8.45.594.315 2.245.339 2.699-.118l1.642-1.655c.34-.572.492-1.236 0-1.654l-3.285-2.482c-.557-.38-1.19-.457-1.643 0l-2.024 2.038c-.477-.338-8.081-5.371-12.312-12.3z"/>
@@ -20,9 +20,25 @@
       <title>Mail</title>
       <path fill-rule="evenodd" d="M27.33 25.271H5.311c-2.026 0-3.67-1.629-3.67-3.638V5.261c0-2.01 1.644-3.638 3.67-3.638h22.02C29.356 1.623 31 3.25 31 5.26v16.372c0 2.01-1.644 3.638-3.67 3.638zM6.23 3.441L16.32 12.14l10.092-8.697H6.229zm22.936 1.82c0-.523-.226-.992-.583-1.324l-12.261 10.42L4.06 3.936c-.357.332-.583.8-.583 1.324v16.372c0 1.005.821 1.82 1.834 1.82h22.02a1.827 1.827 0 0 0 1.834-1.82V5.261z"/>
     </g>
+    <g id="search">
+      <title>Search</title>
+      <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z" />
+    </g>
+    <g id="heart">
+      <title>Heart</title>
+      <path fill-rule="evenodd" d="M31.196 5.112c-3.63-3.59-9.432-3.665-13.192-.288-3.76-3.377-9.561-3.302-13.192.288a9.394 9.394 0 0 0 0 13.393L15.865 29.43a3.048 3.048 0 0 0 4.278 0l11.053-10.925a9.394 9.394 0 0 0 0-13.393zm-1.427 11.983L18.716 28.02c-.392.39-1.033.39-1.425 0L6.24 17.095a7.423 7.423 0 0 1 0-10.574c2.844-2.811 7.416-2.91 10.409-.222l1.356 1.218L19.36 6.3c2.993-2.688 7.566-2.59 10.409.222a7.422 7.422 0 0 1 0 10.574zm-18.514-9.75h-.004a4.246 4.246 0 0 0-4.246 4.243.5.5 0 0 0 1 0 3.247 3.247 0 0 1 3.25-3.245.5.5 0 1 0 0-.998z"/>
+    </g>
+    <g id="arrow">
+      <title>Arrow</title>
+      <path fill-rule="evenodd" d="M2.002 6.024l15.064 14.97-15.26 15.165v.001A2.837 2.837 0 0 0 1 38.143 2.866 2.866 0 0 0 3.875 41c.775 0 1.478-.305 1.995-.801h.001l17.25-17.142A2.84 2.84 0 0 0 24 21L24 20.994v-.006a2.84 2.84 0 0 0-.88-2.057h.001L5.871 1.787l-.007.008A2.874 2.874 0 0 0 3.875 1 2.866 2.866 0 0 0 1 3.857c0 .867.389 1.643 1.002 2.167z"/>
+    </g>
+    <g id="ampersand">
+      <title>Ampersand</title>
+      <path fill-rule="evenodd" d="M692.434 648.398c3.2-3.96 6.06-8.51 8.581-13.652 2.52-5.14 4.5-10.41 5.94-15.81h-19.081c-2.08 7.36-4.54 13.38-7.38 18.06l-17.042-16.62c6.16-3.56 10.62-7.31 13.381-11.252 2.76-3.94 4.14-8.29 4.14-13.05 0-5.8-2.23-10.431-6.69-13.892-4.461-3.46-10.411-5.19-17.852-5.19-7.8 0-14.031 1.86-18.691 5.58-4.66 3.72-6.99 8.621-6.99 14.701 0 3.72.68 7.151 2.04 10.291 1.36 3.141 3.54 6.431 6.54 9.871-5.88 3.36-10.031 6.97-12.45 10.831-2.422 3.86-3.631 8.531-3.631 14.011 0 7.641 2.86 13.702 8.58 18.181 5.72 4.481 13.461 6.721 23.222 6.721 9.64 0 18.281-2.66 25.922-7.98l6.901 6.78h22.622l-18.062-17.581zm-47.913-14.522c1.34-1.92 3.17-3.76 5.49-5.52l19.921 19.802c-4.04 2.44-8.58 3.66-13.62 3.66-4.042 0-7.351-1.02-9.931-3.06-2.58-2.04-3.87-4.78-3.87-8.221 0-2.52.669-4.74 2.01-6.66zm16.77-29.372c-1.84 1.86-4.48 3.75-7.92 5.67-3.8-4.24-5.7-8.12-5.7-11.64 0-2.36.77-4.18 2.31-5.46 1.54-1.28 3.65-1.921 6.33-1.921 2.28 0 4.14.61 5.58 1.83 1.441 1.22 2.161 2.89 2.161 5.01 0 2.481-.92 4.65-2.76 6.511z"/>
+    </g>
   </svg>
   <header>
-    <div id="logo">logo</div>
+    <a class="logo" href="#"><div class="logo">logo</div></a>
     <div id="contact">
       <div id="phone" data-title="+966 11 466 0000">
         <svg viewBox="0 0 30 29" height="30" width="29">
@@ -40,9 +56,77 @@
         </svg>
       </div>
     </div>
-
   </header>
-
-  
+  <nav>
+    <ul id="navigation">
+      <li class="navItem"><a id="current" href="#">HOME</a></li>
+      <li class="navItem"><a href="#">What about ISAMA</a></li>
+      <li class="navItem"><a href="#">What we do?</a></li>
+      <li class="navItem"><a href="#">Our Projects</a></li>
+      <li class="navItem"><a href="#">Excellent Team</a></li>
+      <li class="navItem"><a href="#">Contact</a></li>
+    </ul>
+    <div id="searchField">
+      <svg viewBox="0 0 512 512" height="26" width="26">
+        <use xlink:href="#search" />
+      </svg>
+      <input type="search" placeholder="Type your search words">
+    </div>
+  </nav>
+  <main>
+    <div id="cover">
+      <div id="pos"></div>
+      <section id="slider">
+        <h1>LET’S DRAW SOME ARTS</h1>
+        <svg id="ampers" viewBox="623.249 576.992 87.247 90.187" height="92" width="89">
+          <use xlink:href="#ampersand" />
+        </svg>
+        <p>make your business much better</p>
+        <div class="design" id="n1">
+          <a href="#">
+            <div class="like">
+              <svg viewBox="0 0.585 33 28.831" height="30" width="33">
+                <use xlink:href="#heart" />
+              </svg>
+              &nbsp;Like
+            </div>
+          </a>
+        </div>
+        <div class="design" id="n2">
+          <a href="#">
+            <div class="like">
+              <svg viewBox="0 0.585 33 28.831" height="30" width="33">
+                <use xlink:href="#heart" />
+              </svg>
+              &nbsp;Like
+            </div>
+          </a>
+        </div>
+        <a href="#">
+          <div class="next">
+            <svg viewBox="1 1 23 40" height="41" width="24">
+                <use xlink:href="#arrow" />
+            </svg>
+          </div>
+        </a>
+      </section>
+    </div>
+    <section class="articles">
+      <article id="what">
+        <img src="../ex10_html-css-fundamentals-part2/img/lamp.png" alt="What about ISAMA">
+        <div>
+          <h2>What about ISAMA</h2>
+          <p>ISAMA is a marketing foundation located in Riyadh built on the talent of creation that leads to a modern concept of professionalism. At ISAMA we believe even if you are good at what you do, you have a great product or you provide an excellent service. We still can present you a little better to the world, creating your full identity, provides you with your marketing plans, design your website, print your publications, design your logo’s and offices. Simply we give your business the perfect image.</p>
+        </div>
+      </article>
+      <article id="why">
+        <img src="../ex10_html-css-fundamentals-part2/img/tree.png" alt="Why we exist">
+        <div>
+          <h2>Why we exist</h2>
+          <p>Reaching customer satisfaction through providing them with cutting-edge technologies that give clients access to a wide range of tools, ensuring efficient and results-oriented communication solutions, which grant them a special character that distinguishes them from the others in the business.</p>
+        </div>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
