--- a/src/ex10_html-css-fundamentals-part2/task-04.html
+++ b/src/ex10_html-css-fundamentals-part2/task-04.html
@@ -36,43 +36,58 @@
       <title>Ampersand</title>
       <path fill-rule="evenodd" d="M692.434 648.398c3.2-3.96 6.06-8.51 8.581-13.652 2.52-5.14 4.5-10.41 5.94-15.81h-19.081c-2.08 7.36-4.54 13.38-7.38 18.06l-17.042-16.62c6.16-3.56 10.62-7.31 13.381-11.252 2.76-3.94 4.14-8.29 4.14-13.05 0-5.8-2.23-10.431-6.69-13.892-4.461-3.46-10.411-5.19-17.852-5.19-7.8 0-14.031 1.86-18.691 5.58-4.66 3.72-6.99 8.621-6.99 14.701 0 3.72.68 7.151 2.04 10.291 1.36 3.141 3.54 6.431 6.54 9.871-5.88 3.36-10.031 6.97-12.45 10.831-2.422 3.86-3.631 8.531-3.631 14.011 0 7.641 2.86 13.702 8.58 18.181 5.72 4.481 13.461 6.721 23.222 6.721 9.64 0 18.281-2.66 25.922-7.98l6.901 6.78h22.622l-18.062-17.581zm-47.913-14.522c1.34-1.92 3.17-3.76 5.49-5.52l19.921 19.802c-4.04 2.44-8.58 3.66-13.62 3.66-4.042 0-7.351-1.02-9.931-3.06-2.58-2.04-3.87-4.78-3.87-8.221 0-2.52.669-4.74 2.01-6.66zm16.77-29.372c-1.84 1.86-4.48 3.75-7.92 5.67-3.8-4.24-5.7-8.12-5.7-11.64 0-2.36.77-4.18 2.31-5.46 1.54-1.28 3.65-1.921 6.33-1.921 2.28 0 4.14.61 5.58 1.83 1.441 1.22 2.161 2.89 2.161 5.01 0 2.481-.92 4.65-2.76 6.511z"/>
     </g>
+    <g id="burger">
+      <title>Burger</title>
+      <rect height="25" width="150" y="0" x="0" />
+      <rect height="25" width="150" y="50" x="0" />
+      <rect height="25" width="150" y="100" x="0" />
+    </g>
   </svg>
-  <header>
-    <a class="logo" href="#"><div class="logo">logo</div></a>
-    <div id="contact">
-      <div id="phone" data-title="+966 11 466 0000">
-        <svg viewBox="0 0 30 29" height="30" width="29">
-          <use xlink:href="#telephone" />
-        </svg>
-      </div><hr>
-      <div id="city" data-title="Saudi Arabia . Alreyadah">
-        <svg viewBox="0 0 28 35" height="35" width="26">
-          <use xlink:href="#gps" />
-        </svg>
-      </div><hr>
-      <div id="email" data-title="example@gmail.com">
-        <svg viewBox="0 0 31 25" height="31" width="26">
-          <use xlink:href="#mail" />
-        </svg>
+  <div id="style_maker">
+    <header>
+      <a href="#">
+        <nav id="hidden_nav">
+          <svg viewBox="0 0 125 150" height="57" width="61">
+            <use xlink:href="#burger" />
+          </svg>
+        </nav>
+      </a>
+      <a class="logo" href="#"><div class="logo">logo</div></a>
+      <div id="contact">
+        <div id="phone" data-title="+966 11 466 0000">
+          <svg viewBox="0 0 30 29" height="30" width="29">
+            <use xlink:href="#telephone" />
+          </svg>
+        </div><hr>
+        <div id="city" data-title="Saudi Arabia . Alreyadah">
+          <svg viewBox="0 0 28 35" height="35" width="26">
+            <use xlink:href="#gps" />
+          </svg>
+        </div><hr>
+        <div id="email" data-title="example@gmail.com">
+          <svg viewBox="0 0 31 25" height="31" width="26">
+            <use xlink:href="#mail" />
+          </svg>
+        </div>
       </div>
-    </div>
-  </header>
-  <nav>
-    <ul id="navigation">
-      <li class="navItem"><a id="current" href="#">HOME</a></li>
-      <li class="navItem"><a href="#">What about ISAMA</a></li>
-      <li class="navItem"><a href="#">What we do?</a></li>
-      <li class="navItem"><a href="#">Our Projects</a></li>
-      <li class="navItem"><a href="#">Excellent Team</a></li>
-      <li class="navItem"><a href="#">Contact</a></li>
-    </ul>
-    <div id="searchField">
-      <svg viewBox="0 0 512 512" height="26" width="26">
-        <use xlink:href="#search" />
-      </svg>
-      <input type="search" placeholder="Type your search words">
-    </div>
-  </nav>
+    </header>
+    <nav>
+      <ul id="navigation">
+        <li class="navItem"><a id="current" href="#">HOME</a></li>
+        <li class="navItem"><a href="#">What about ISAMA</a></li>
+        <li class="navItem"><a href="#">What we do?</a></li>
+        <li class="navItem"><a href="#">Our Projects</a></li>
+        <li class="navItem"><a href="#">Excellent Team</a></li>
+        <li class="navItem"><a href="#">Contact</a></li>
+      </ul>
+      <div id="searchField">
+        <svg viewBox="0 0 512 512" height="26" width="26">
+          <use xlink:href="#search" />
+        </svg>
+        <input type="search" placeholder="Type your search words">
+      </div>
+    </nav>
+  </div>
   <main>
     <div id="cover">
       <div id="pos"></div>
