--- a/src/ex11_html-css-advanced/task-01.html
+++ b/src/ex11_html-css-advanced/task-01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="loader">
-    <svg viewBox="0 0 100 100" height="100px" width="100px">
+    <svg viewBox="0 0 100 100">
       <g>
         <clipPath id="circle">
           <circle r="50" cx="50" cy="50" />
