ex11_html-css-advanced is done

--- a/src/ex11_html-css-advanced/task-01.html
+++ b/src/ex11_html-css-advanced/task-01.html
@@ -21,6 +21,10 @@
     <div class="block"></div>
     <div class="ball"></div>
     <div class="block"></div>
+  </div><br><br>
+  <div class="various_animation">
+    <div class="n1"></div>
+    <div class="n2"></div>
   </div>
 </body>
 </html>
