--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -40,7 +40,7 @@
         <div>Create new list</div>
       </button>
     </div>
-    <div class="user_menu">
+    <div class="user_menu" onclick="return showDropMenu()">
       <img src="avatar.svg">
       <svg viewBox="0 0 17 10" height="8" width="12">
         <use xlink:href="#arrow" />
@@ -63,5 +63,6 @@
       Kanban board by Ilya Bayanov, 2020
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
