kanban task lists

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -24,6 +24,10 @@
     <g id="arrow">
       <polyline points="1,1 8,8 15,1" fill="none" stroke="white" stroke-width="3" />
     </g>
+    <g id="cross" stroke="currentColor" stroke-width="2" stroke-linecap="round">
+      <line x1="1" y1="7" x2="13" y2="7" />
+      <line x1="7" y1="1" x2="7" y2="13" />
+    </g>
   </svg>
   <header class="header">
     <div class="head">
@@ -40,15 +44,85 @@
         <div>Create new list</div>
       </button>
     </div>
-    <div class="user_menu">
+    <button class="user_menu">
       <img src="avatar.svg">
       <svg class="arrow" viewBox="0 0 17 10" height="8" width="12">
         <use xlink:href="#arrow" />
       </svg>
-    </div>    
+    </button>    
   </header>
   <main class="main">
-    
+    <div class="taskList backlog">
+      <div class="taskListHead">
+        Backlog
+        <button type="button" title="context menu" class="context">•••</button>
+      </div>
+      <ul class="listOfTasks">
+        <li class="task">Login page – performance issues</li>
+        <li class="task">Sprint bugfix</li>
+      </ul>
+      <button type="button" title="add card" class="addCard">
+        <svg  viewBox="0 0 14 14" height="14" width="14">
+          <use xlink:href="#cross" />
+        </svg>
+        Add card
+      </button>
+    </div>
+    <div class="taskList ready">
+      <div class="taskListHead">
+        Ready
+        <button type="button" title="context menu" class="context">•••</button>
+      </div>
+      <ul class="listOfTasks">
+        <li class="task">Shop page – performance issues</li>
+        <li class="task">Checkout bugfix</li>
+        <li class="task">Shop bug1</li>
+        <li class="task">Shop bug2</li>
+        <li class="task">Shop bug3</li>
+        <li class="task">Shop bug4</li>
+        <li class="task">Shop bug5</li>
+        <li class="task">Shop bug6</li>
+        <li class="task">Shop page – performance issues</li>
+      </ul>
+      <button type="button" title="add card" class="addCard">
+        <svg  viewBox="0 0 14 14" height="14" width="14">
+          <use xlink:href="#cross" />
+        </svg>
+        Add card
+      </button>
+    </div>
+    <div class="taskList inProgress">
+      <div class="taskListHead">
+        In Progress
+        <button type="button" title="context menu" class="context">•••</button>
+      </div>
+      <ul class="listOfTasks">
+        <li class="task">User page – performance issues</li>
+        <li class="task">Auth bugfix</li>
+      </ul>
+      <button type="button" title="add card" class="addCard">
+        <svg  viewBox="0 0 14 14" height="14" width="14">
+          <use xlink:href="#cross" />
+        </svg>
+        Add card
+      </button>
+    </div>
+    <div class="taskList finished">
+      <div class="taskListHead">
+        Finished
+        <button type="button" title="context menu" class="context">•••</button>
+      </div>
+      <ul class="listOfTasks">
+        <li class="task">Main page – performance issues</li>
+        <li class="task">Main page bugfix</li>
+      </ul>
+      <button type="button" title="add card" class="addCard">
+        <svg  viewBox="0 0 14 14" height="14" width="14">
+          <use xlink:href="#cross" />
+        </svg>
+        Add card
+      </button>
+    </div>
   </main>
   <footer class="footer">
     <div class="tasks_number">
@@ -63,6 +137,7 @@
       Kanban board by Ilya Bayanov, 2020
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script src="dropdown_menu.js"></script>
+  <script src="tasks.js"></script>
 </body>
 </html>
